# beanhub-extract

./: README.md  pyproject.toml
.circleci/: config.yml
beanhub_extract/: data_types.py  utils.py
beanhub_extract/extractors/: __init__.py  base.py  chase.py  csv.py  mercury.py  plaid.py  wealthsimple.py
tests/: test_utils.py
tests/extractors/: conftest.py  test_chase.py  test_csv.py  test_extractor.py  test_mercury.py  test_plaid.py  test_utils.py  test_wealthsimple.py
tests/extractors/fixtures/: chase_credit_card.csv  csv.csv  other.csv  plaid.csv  wealthsimple.csv
