[project]
name = "beanhub-extract"
version = "0.1.6"
description = "The simple library for extracting all kind of bank account transaction export files, mostly for beanhub-import to inject and generate transactions"
authors = [{ name = "Fang-Pen Lin", email = "fangpen@launchplatform.com" }]
requires-python = "~=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "pytz>= 2023.1, <2025",
    "iso8601>=2.1.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=7.4.1,<8",
    "pytest-mock>=3.11.1,<4",
    "pytest-lazy-fixture>=0.6.3,<0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
